Bug 220187 TABINDEX property ignored for input type=file r=aaronleventhal, sr=jst Two children of <input type=file> should have same tabindex with their parent. Patch by neo.liu@sun.com